# RAG_POC

./: just.py  linkedin_fetch.py  pyproject.toml  requirements.txt
