[project]
name = "rag-poc"
version = "0.1.0"
description = ""
authors = [
    {name = "KRISHNA DIPAYAN BHUNIA",email = "krishnabhunia@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "polars (>=1.36.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
